change prefix to c-x, consistent with emacs:)

--- a/mac/.tmux.conf
+++ b/mac/.tmux.conf
@@ -12,13 +12,13 @@ set -g status on
 set -g status-keys emacs
 
 set -g history-limit 1000000
-set -g prefix C-t
+set -g prefix C-x
 
 set -g status-bg green
 setw -g window-status-current-bg cyan
 setw -g window-status-current-attr bold
 
-bind-key C-t last-window
+bind-key C-x last-window
 
 set -g status-right '#7H | %F %s'
 
