--- a/mac/.gitconfig
+++ b/mac/.gitconfig
@@ -2,7 +2,7 @@
 	default = simple
 [user]
 	name = freestyler
-	email = dengzhiping@corp.netease.com
+	email = kofreestyler@gmail.com
 [alias]
 	st = status
 
