--- a/.hgrc
+++ b/.hgrc
@@ -1,5 +1,5 @@
 [ui]
-username = freestyler <dengzhiping@corp.netease.com>
+username = freestyler <kofreestyler@gmail.com>
 
 [extensions]
 children =
